--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${POSTGRESQL_USERNAME:}
+spring.datasource.password=${POSTGRESQL_PASSWORD:}
 spring.jpa.hibernate.ddl-auto=update
 
