removed cloudfront aws service and redirected traffic to s3 bucket holding about page

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
+# for AWS deployment and running on localhost, jdbc must be included (for Heroku it's not needed):
 #spring.datasource.url=jdbc:${DATABASE_URL}
 spring.datasource.url=${DATABASE_URL}
+
 spring.datasource.username=${POSTGRESQL_USERNAME:}
 spring.datasource.password=${POSTGRESQL_PASSWORD:}
 spring.jpa.hibernate.ddl-auto=update
 
+# required for AWS elastic beanstalk deployment
 server.port=5000
 
